--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -7,10 +7,11 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-        echo "GITHUB_REF=${GITHUB_REF}"
-        echo "GITHUB_REF_NAME=${GITHUB_REF_NAME}"
-        echo "GITHUB_REF_TYPE=${GITHUB_REF_TYPE}"
-        echo "github.ref=${{ github.ref }}"
-        echo "github.ref_name=${{ github.ref_name }}"
-        echo "github.ref_type=${{ github.ref_type }}"
+      - name: variables
+        run: |
+          echo "GITHUB_REF=${GITHUB_REF}"
+          echo "GITHUB_REF_NAME=${GITHUB_REF_NAME}"
+          echo "GITHUB_REF_TYPE=${GITHUB_REF_TYPE}"
+          echo "github.ref=${{ github.ref }}"
+          echo "github.ref_name=${{ github.ref_name }}"
+          echo "github.ref_type=${{ github.ref_type }}"
