--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,7 +16,15 @@ jobs:
           echo "github.ref_name=${{ github.ref_name }}"
           echo "github.ref_type=${{ github.ref_type }}"
       - name: trigger manual workflow
-        env:
-          GH_TOKEN: ${{ github.token }}
+        # env:
+        #   GH_TOKEN: ${{ github.token }}
         run: |
-          gh workflow run manual.yml -f tag=${GITHUB_REF_NAME}
+          wfid=manual.yml
+          curl -L -X POST \
+              -H "Accept: application/vnd.github.v3+json" \
+              -H "Authorization: Bearer ${{ github.token }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              -d '{"inputs":{"tag":"${{ github.ref_name }}"}}' \
+              "${{ github.api_url }}/repos/${{ github.repository }}/actions/workflows/${wfid}/dispatches"
+          # `gh workflow` requires we clone the project.
+          # gh workflow run manual.yml -f tag=${GITHUB_REF_NAME}
