--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -4,7 +4,8 @@ on:
     tags: ['*']
 
 jobs:
-  job:
+
+  echo:
     runs-on: ubuntu-latest
     steps:
       - name: echo variables
@@ -15,9 +16,13 @@ jobs:
           echo "github.ref=${{ github.ref }}"
           echo "github.ref_name=${{ github.ref_name }}"
           echo "github.ref_type=${{ github.ref_type }}"
+
+  trigger:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
       - name: trigger manual workflow
-        # env:
-        #   GH_TOKEN: ${{ github.token }}
         run: |
           wfid=manual.yml
           curl -L -X POST \
@@ -26,5 +31,8 @@ jobs:
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -d '{"inputs":{"tag":"${{ github.ref_name }}"}}' \
               "${{ github.api_url }}/repos/${{ github.repository }}/actions/workflows/${wfid}/dispatches"
+
+        # env:
+        #   GH_TOKEN: ${{ github.token }}
           # `gh workflow` requires we clone the project.
           # gh workflow run manual.yml -f tag=${GITHUB_REF_NAME}
