--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -29,7 +29,7 @@ jobs:
               -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: Bearer ${{ github.token }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              -d '{"inputs":{"tag":"${{ github.ref_name }}"}}' \
+              -d '{"ref":"master","inputs":{"tag":"${{ github.ref_name }}"}}' \
               "${{ github.api_url }}/repos/${{ github.repository }}/actions/workflows/${wfid}/dispatches"
 
         # env:
