--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,11 @@ jobs:
           - macos
     runs-on: ${{ matrix.platform }}-latest
     steps:
+      - name: install GCC on macOS
+        run: |
+          brew install gcc@13
+          type gcc-13
+          type g++-13
       - name: GCC
         run: |
           type gcc
